docs: update Helm deployment documentation and add EDC Kafka demo tests

--- a/.github/actions/publish-docker-image/action.yml
+++ b/.github/actions/publish-docker-image/action.yml
@@ -96,7 +96,7 @@ runs:
         build-args: |
           JAR=build/libs/${{ inputs.imagename }}.jar
           ADDITIONAL_FILES=build/legal/*
-        push: false
+        push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
 
