chore: remove unused push triggers and update controlplane image repository in values.yaml

--- a/charts/edc-kafka-demo/values.yaml
+++ b/charts/edc-kafka-demo/values.yaml
@@ -244,6 +244,7 @@ producer-edc:
             secret_alias: clientSecretAlias
     controlplane:
       image:
+        repository: "tractusx/edc-controlplane-kafka-local"
         tag: "latest"
       endpoints:
         management:
@@ -297,6 +298,7 @@ consumer-edc:
             secret_alias: clientSecretAlias
     controlplane:
       image:
+        repository: "tractusx/edc-controlplane-kafka-local"
         tag: "latest"
       endpoints:
         management:
